--- a/requirements.txt
+++ b/requirements.txt
@@ -15,36 +15,24 @@ numpy==1.24.3
 scikit-learn==1.3.2
 sentence-transformers==2.2.2
 chromadb==0.4.18
-
-# Core dependencies
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 gradio==4.8.0
 google-generativeai==0.3.2
-
-# Database
-sqlite3  # Built-in with Python
+sqlite3  
 pandas==2.1.3
-
-# Authentication and Security
 pyjwt==2.8.0
 python-multipart==0.0.6
-
-# Data generation and utilities
 faker==20.1.0
 python-dotenv==1.0.0
 pydantic[email]==2.5.0
-
-# Logging and utilities
 typing-extensions==4.8.0
-uuid  # Built-in with Python
-datetime  # Built-in with Python
-json  # Built-in with Python
-os  # Built-in with Python
-sys  # Built-in with Python
-re  # Built-in with Python
-
-# Optional: For enhanced functionality
-httpx==0.25.2  # For HTTP requests
-python-jose[cryptography]==3.3.0  # For JWT handling
-passlib[bcrypt]==1.7.4  # For password hashing
+uuid  
+datetime  
+json 
+os  
+sys  
+re  
+httpx==0.25.2  
+python-jose[cryptography]==3.3.0  
+passlib[bcrypt]==1.7.4
